--- a/templates/admin.html
+++ b/templates/admin.html
@@ -60,7 +60,7 @@
                 </form>
             </tr>
 
-            <tbody>
+            <tbody id="table-content">
                 {% for row in table['data'] %}
                     <tr>
                     {% for cell in row %}
