--- a/templates/home_layout.html
+++ b/templates/home_layout.html
@@ -1,97 +1,77 @@
 {% extends "layout.html" %}
 
 {% block page_style %}
-<link rel="stylesheet" href="/static/tables.css">
-<link rel="stylesheet" href="/static/forms.css">
-<link rel="stylesheet" href="/static/user.css">
-
 {% endblock %}
 
 {% block background %}
-<div class="background right home">
-</div>
+<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+    <symbol id="house" viewBox="0 0 90.24 81.87">
+    <polygon points="53.71 0.35 53.66 0.41 53.59 0.46 53.51 0.52 53.43 0.58 53.35 0.64 53.19 0.75 53.03 0.87 52.7 1.11 52.54 1.22 52.38 1.34 52.3 1.4 52.22 1.46 52.14 1.51 52.07 1.57 51.99 1.63 51.92 1.69 51.84 1.74 51.77 1.79 51.7 1.85 51.63 1.9 51.56 1.95 51.5 2.01 51.43 2.06 51.37 2.11 51.31 2.15 51.28 2.18 51.25 2.2 51.17 2.27 51.1 2.33 51.03 2.38 50.96 2.44 50.89 2.5 50.82 2.55 50.75 2.6 50.69 2.65 50.62 2.7 50.56 2.74 50.5 2.79 50.44 2.83 50.38 2.87 50.33 2.91 50.27 2.95 50.21 2.98 50.16 3.02 50.11 3.05 50.05 3.08 50 3.12 49.95 3.15 49.9 3.18 49.85 3.21 49.8 3.23 49.76 3.26 49.71 3.29 49.66 3.32 49.61 3.34 49.56 3.37 49.52 3.39 49.47 3.42 49.42 3.44 49.33 3.49 49.24 3.54 49.14 3.59 49.05 3.64 49 3.66 48.95 3.69 48.9 3.72 48.85 3.74 48.8 3.77 48.74 3.8 48.69 3.83 48.63 3.86 48.58 3.89 48.52 3.92 48.46 3.96 48.41 3.99 48.34 4.03 48.28 4.06 48.22 4.1 48.15 4.14 48.09 4.18 48.02 4.23 47.95 4.27 47.88 4.32 47.8 4.37 47.73 4.42 47.65 4.47 47.57 4.52 47.18 4.79 46.8 5.05 46.43 5.3 46.07 5.55 45.73 5.79 45.4 6.01 45.07 6.24 44.76 6.46 44.45 6.67 44.16 6.88 43.87 7.08 43.59 7.27 43.32 7.46 43.06 7.64 42.81 7.83 42.56 8 42.32 8.17 42.08 8.34 41.85 8.51 41.63 8.67 41.4 8.82 41.19 8.98 40.98 9.13 40.77 9.28 40.36 9.58 39.96 9.87 39.56 10.15 39.17 10.43 38.98 10.57 38.78 10.71 38.59 10.85 38.39 10.99 38.19 11.14 37.99 11.28 37.79 11.43 37.58 11.57 37.37 11.72 37.16 11.87 36.94 12.03 36.72 12.18 36.49 12.34 36.26 12.51 36.02 12.67 35.77 12.84 35.52 13.01 35.27 13.19 35 13.37 34.73 13.56 34.45 13.75 34.16 13.95 33.87 14.15 33.56 14.36 33.24 14.57 32.91 14.79 32.58 15.02 32.23 15.25 31.87 15.49 31.5 15.73 31.12 15.99 30.72 16.25 30.63 16.31 30.54 16.37 30.45 16.43 30.36 16.49 30.27 16.55 30.18 16.61 30.1 16.66 30.01 16.71 29.85 16.82 29.69 16.92 29.53 17.02 29.38 17.12 29.23 17.21 29.09 17.3 28.95 17.39 28.82 17.47 28.68 17.55 28.56 17.63 28.43 17.7 28.31 17.78 28.19 17.85 28.07 17.92 27.96 17.98 27.84 18.05 27.73 18.11 27.63 18.18 27.52 18.24 27.42 18.3 27.31 18.36 27.21 18.41 27.01 18.52 26.81 18.64 26.62 18.75 26.42 18.86 26.32 18.91 26.23 18.97 26.13 19.02 26.03 19.08 25.93 19.14 25.82 19.2 25.72 19.26 25.62 19.32 25.51 19.38 25.4 19.45 25.29 19.51 25.18 19.58 25.06 19.65 24.95 19.72 24.82 19.79 24.7 19.87 24.58 19.95 24.45 20.03 24.31 20.12 24.18 20.2 24.11 20.25 24.04 20.3 23.96 20.34 23.89 20.39 23.82 20.44 23.74 20.49 23.67 20.54 23.59 20.59 23.51 20.64 23.43 20.69 23.35 20.75 23.27 20.8 23.19 20.86 23.1 20.91 23.02 20.97 22.93 21.03 22.84 21.09 22.75 21.15 22.66 21.21 22.57 21.27 22.43 21.37 22.29 21.46 22.15 21.57 22 21.67 21.85 21.77 21.7 21.88 21.54 21.99 21.38 22.11 21.22 22.22 21.05 22.34 20.88 22.46 20.71 22.58 20.54 22.71 20.36 22.84 20.18 22.96 20 23.09 19.82 23.23 19.64 23.36 19.45 23.5 19.26 23.64 19.07 23.78 18.87 23.92 18.68 24.07 18.48 24.21 18.28 24.36 18.08 24.51 17.87 24.66 17.67 24.81 17.46 24.96 17.25 25.12 17.05 25.27 16.83 25.43 16.41 25.75 15.98 26.07 15.54 26.39 15.11 26.72 14.67 27.05 14.22 27.39 13.78 27.72 13.33 28.06 12.88 28.39 12.44 28.73 11.99 29.07 11.54 29.41 10.65 30.08 9.77 30.75 8.9 31.41 8.05 32.05 7.22 32.68 6.82 32.98 6.42 33.28 6.03 33.58 5.65 33.87 5.27 34.15 4.91 34.42 4.55 34.69 4.21 34.95 3.87 35.2 3.55 35.44 3.39 35.55 3.24 35.67 3.09 35.78 2.94 35.89 2.79 35.99 2.65 36.1 2.51 36.2 2.38 36.3 2.25 36.4 2.12 36.49 2 36.58 1.88 36.67 1.76 36.75 1.65 36.83 1.54 36.91 1.43 36.98 1.33 37.06 1.23 37.13 1.14 37.19 1.05 37.25 0.96 37.31 0.88 37.37 0.81 37.42 0.73 37.47 0.7 37.49 0.67 37.51 0.63 37.53 0.6 37.55 0.57 37.57 0.54 37.59 0.52 37.6 0.49 37.62 0.49 37.7 0.48 37.83 0.47 37.96 0.47 38.09 0.46 38.23 0.45 38.37 0.45 38.51 0.44 38.66 0.43 38.81 0.43 38.96 0.42 39.11 0.42 39.27 0.41 39.43 0.41 39.59 0.4 39.75 0.4 39.92 0.39 40.09 0.39 40.26 0.38 40.42 0.38 40.6 0.37 40.77 0.36 40.95 0.36 41.3 0.35 41.66 0.34 42.02 0.33 42.38 0.33 42.74 0.32 43.1 0.31 43.46 0.3 43.82 0.3 44.18 0.29 44.53 0.29 44.88 0.28 45.22 0.28 45.56 0.28 45.89 0.27 46.21 0.27 46.52 0.27 46.82 0.26 47.11 0.26 47.39 0.26 47.65 0.25 47.91 0.25 48.06 0.25 48.2 0.25 48.35 0.25 48.5 0.25 48.64 0.25 48.78 0.25 48.92 0.25 49.05 0.25 49.19 0.25 49.32 0.25 49.45 0.25 49.58 0.25 49.7 0.25 49.82 0.26 49.95 0.26 50.07 0.26 50.19 0.26 50.3 0.26 50.42 0.26 50.53 0.26 50.64 0.27 50.75 0.27 50.86 0.27 50.97 0.27 51.07 0.28 51.18 0.28 51.28 0.28 51.38 0.28 51.48 0.29 51.58 0.29 51.67 0.29 51.77 0.3 51.87 0.3 51.96 0.3 52.05 0.31 52.14 0.31 52.23 0.32 52.32 0.33 52.5 0.33 52.67 0.34 52.84 0.35 53.01 0.36 53.17 0.37 53.33 0.38 53.49 0.39 53.65 0.4 53.81 0.41 53.96 0.42 54.12 0.43 54.27 0.45 54.42 0.47 54.73 0.49 55.04 0.52 55.35 0.53 55.51 0.54 55.68 0.55 55.84 0.56 56.01 0.58 56.18 0.59 56.35 0.6 56.53 0.61 56.71 0.63 56.89 0.64 57.08 0.65 57.28 0.66 57.48 0.67 57.68 0.68 57.89 0.69 58.11 0.7 58.33 0.71 58.56 0.72 58.68 0.72 58.8 0.73 58.91 0.73 59.04 0.74 59.16 0.74 59.29 0.75 59.42 0.75 59.55 0.76 59.68 0.76 59.81 0.77 59.95 0.77 60.09 0.77 60.23 0.78 60.37 0.78 60.51 0.79 60.66 0.79 60.81 0.79 60.96 0.8 61.04 0.8 61.12 0.8 61.2 0.8 61.28 0.8 61.36 0.8 61.44 0.8 61.52 0.8 61.59 0.8 61.75 0.81 61.9 0.81 62.06 0.8 62.21 0.8 62.36 0.8 62.51 0.8 62.66 0.8 62.8 0.8 62.95 0.79 63.09 0.79 63.24 0.79 63.38 0.78 63.53 0.78 63.67 0.77 63.81 0.77 63.95 0.76 64.09 0.76 64.23 0.75 64.51 0.74 64.79 0.73 65.06 0.72 65.34 0.71 65.61 0.7 65.75 0.7 65.89 0.69 66.03 0.69 66.16 0.69 66.3 0.68 66.44 0.68 66.58 0.68 66.71 0.67 66.85 0.67 66.99 0.67 67.13 0.67 67.27 0.66 67.41 0.66 67.55 0.66 67.69 0.66 67.83 0.66 67.98 0.66 68.12 0.67 68.19 0.67 68.27 0.67 68.34 0.67 68.41 0.67 68.48 0.67 68.56 0.67 68.63 0.67 68.7 0.68 68.78 0.68 68.85 0.68 68.93 0.68 69 0.69 69.08 0.69 69.15 0.69 69.23 0.69 69.3 0.7 69.38 0.7 69.45 0.7 69.53 0.71 69.61 0.71 69.69 0.72 69.76 0.72 69.84 0.73 69.92 0.73 70 0.74 70.08 0.74 70.16 0.75 70.23 0.75 70.29 0.76 70.34 0.76 70.4 0.76 70.45 0.76 70.51 0.77 70.57 0.77 70.63 0.77 70.69 0.77 70.75 0.77 70.81 0.77 70.87 0.77 70.93 0.78 70.99 0.78 71.06 0.78 71.12 0.78 71.18 0.78 71.25 0.78 71.31 0.78 71.44 0.78 71.58 0.77 71.71 0.77 71.84 0.77 71.98 0.77 72.25 0.76 72.52 0.76 72.66 0.76 72.79 0.76 72.92 0.76 73.06 0.76 73.19 0.76 73.25 0.76 73.31 0.76 73.38 0.76 73.44 0.76 73.5 0.76 73.56 0.76 73.62 0.76 73.68 0.77 73.74 0.77 73.8 0.77 73.86 0.77 73.91 0.77 73.97 0.78 74.03 0.78 74.08 0.78 74.13 0.79 74.18 0.79 74.23 0.8 74.28 0.8 74.33 0.8 74.38 0.81 74.43 0.81 74.54 0.82 74.66 0.83 74.79 0.84 74.92 0.84 75.05 0.85 75.19 0.86 75.34 0.87 75.5 0.87 75.65 0.88 75.81 0.89 75.98 0.9 76.15 0.9 76.32 0.91 76.5 0.92 76.67 0.92 76.86 0.93 77.04 0.94 77.22 0.94 77.41 0.95 77.59 0.96 77.96 0.97 78.33 0.98 78.7 0.99 79.06 1 79.41 1.01 79.75 1.02 80.08 1.03 80.39 1.04 80.67 1.04 80.94 1.05 81.17 1.05 81.33 89.99 81.62 89.77 18.63 89.79 18.56 89.8 18.55 89.79 18.54 89.77 18.53 89.75 18.51 89.72 18.5 89.7 18.49 89.68 18.47 89.66 18.46 89.64 18.45 89.61 18.43 89.59 18.42 89.57 18.41 89.55 18.39 89.52 18.38 89.5 18.37 89.45 18.34 89.4 18.31 89.35 18.29 89.31 18.26 89.26 18.24 89.16 18.19 89.06 18.14 89.01 18.11 88.96 18.08 88.91 18.06 88.86 18.03 88.83 18.02 88.81 18 88.78 17.99 88.75 17.97 88.73 17.96 88.7 17.94 88.68 17.93 88.66 17.91 88.35 17.72 88.04 17.53 87.74 17.34 87.43 17.15 86.82 16.77 86.51 16.59 86.21 16.4 85.9 16.21 85.75 16.11 85.59 16.02 85.44 15.92 85.29 15.83 85.14 15.74 84.98 15.64 84.83 15.55 84.67 15.46 84.52 15.36 84.37 15.27 84.21 15.18 84.06 15.09 83.9 14.99 83.75 14.9 83.63 14.83 83.5 14.76 83.37 14.68 83.23 14.6 83.09 14.52 82.95 14.44 82.8 14.36 82.65 14.27 82.49 14.18 82.33 14.09 82.17 14 82 13.91 81.83 13.81 81.65 13.71 81.47 13.62 81.29 13.51 81.1 13.41 80.91 13.31 80.72 13.2 80.52 13.1 80.32 12.99 80.12 12.88 79.91 12.77 79.7 12.66 79.49 12.54 79.28 12.43 79.06 12.31 78.84 12.2 78.62 12.08 78.4 11.96 78.17 11.84 77.94 11.72 77.71 11.6 77.48 11.48 77.24 11.35 77.01 11.23 76.77 11.1 76.53 10.98 76.28 10.85 76.04 10.72 75.8 10.59 75.55 10.47 75.05 10.21 74.55 9.95 74.04 9.68 73.53 9.42 73.02 9.16 72.5 8.89 71.99 8.63 71.47 8.36 70.95 8.1 70.44 7.83 69.92 7.57 69.41 7.31 68.89 7.05 68.39 6.79 67.88 6.53 67.38 6.28 66.89 6.03 66.39 5.78 65.91 5.54 65.43 5.3 64.96 5.07 64.5 4.83 64.05 4.61 63.61 4.39 63.17 4.17 62.75 3.96 62.34 3.76 61.94 3.56 61.56 3.37 61.18 3.19 60.83 3.01 60.48 2.84 60.15 2.68 59.84 2.53 59.54 2.39 59.4 2.32 59.27 2.25 59.13 2.19 59.01 2.13 58.88 2.07 58.76 2.01 58.65 1.96 58.54 1.91 58.44 1.86 58.34 1.81 58.24 1.77 58.16 1.73 58.07 1.69 57.99 1.65 57.92 1.62 57.85 1.59 57.84 1.58 57.82 1.57 57.8 1.56 57.78 1.56 57.73 1.54 57.69 1.52 57.64 1.5 57.58 1.48 57.53 1.46 57.47 1.44 57.41 1.42 57.34 1.4 57.28 1.37 57.21 1.35 57.14 1.33 57.07 1.3 56.99 1.28 56.92 1.25 56.84 1.23 56.76 1.21 56.68 1.18 56.6 1.15 56.52 1.13 56.44 1.1 56.27 1.05 56.1 1 55.93 0.95 55.75 0.89 55.58 0.84 55.41 0.79 55.24 0.74 54.91 0.64 54.6 0.55 54.32 0.47 54.19 0.43 54.08 0.4 53.97 0.36 53.87 0.33 53.78 0.31 53.74 0.3 53.71 0.35"/>
+    </symbol>
+</svg>
+    <svg style="stroke: var(--black); stroke-width: .3pt; fill:var(--background); width: 600px; height:600px; position:fixed; bottom:-5em; right:-8em; z-index:-1">
+        <use xlink:href="#house"/>
+    </svg>
 {% endblock %}
 
 {% block pop_up %}
-    <div id="upload" class="content-grid dialogue" style="display:none" autofocus>
 
-        <div class="inner-header in-dialogue">
-            <h5> upload image </h5>
-            <a href="javascript:close_dialogue('upload')">
-                <svg class="svg-icon">
-                    <use xlink:href="#close"/>
-                </svg>
-            </a>
-        </div>
-        <div class="inner-main in-dialogue">
-
-            <form action = "/uploader" method = "POST" enctype = "multipart/form-data">
-                <label for="file"> accepted formats: jpg, gif and png </label>
-                <input type = "file" name = "file" value="select image"/>
-                <input type = "submit" value="upload"/>
-            </form>
-        </div>
-    </div>
-
-    <div id="new_db" class="content-grid dialogue" style="display:none" autofocus>
-
-        <div class="inner-header in-dialogue">
-            <h5> create your own cards! </h5>
-            <a href="javascript:close_dialogue('new_db')">
-                <svg class="svg-icon">
-                    <use xlink:href="#close"/>
-                </svg>
-            </a>
-        </div>
-        <div class="inner-main in-dialogue">
-
-            <form action = "/user_db" method = "POST">
-                <label for="file"> what is this set called? </label>
-                <input type="text" name="title" placeholder="{{ user }}'s cards">
-                <input type="submit" name="submit" value="go!">
-            </form>
-        </div>
-    </div>
 {% endblock %}
 
 {% block main %}
 <div class="vertical-content-grid">
+    <div id="invisible-collapse" class="mobile-only" style="width:100%; height:100%; margin-left:272px; position:fixed;"  onclick="collapse_ui()">
+    </div>
+    <div id="ui-open-handle" class="mobile-only" style="border-radius:50px; height:100px; width:100px; background-color:var(--black); position:fixed;top:45%; left:-70px;" onclick="open_ui()">
+    </div>
 
-    <div id ="user-info" class="inner-header">
-        <div class="avatar-round">
-            <img class="avatar" src="../static/images/avatars/owl.png" alt="">
+    <div id ="user-info" class="inner-header inverted">
+        <div id="profile" class="block">
+            <div id="avatar">
+                <img class="avatar" src="{{session['avatar']}}" alt="">
+            </div>
+            <h2>hi, {{ session['username'] }} </h2>
+            <h6>this is home</h6>
         </div>
-        <h1>hi, {{ session['username']}}</h1>
-        <h6>this is home</h6>
-        <ul>
-            <li>
-                <a href="/"  class="vertical-content-grid" style="height:fit-content">
-                    <svg class="svg-icon button" class="inner-header">
-                        <use xlink:href="#bookmark"/>
+
+        <svg class="separator" class="inner-header">
+            <use xlink:href="#line"/>
+        </svg>
+
+        <ul class="block">
+            <li class="inverted color-change">
+                <a href="/my_decks"  class="link-with-img no-hover" style="height:fit-content">
+                    <svg class="svg-icon button" class="link-img">
+                        <use xlink:href="#cards"/>
                     </svg>
-                    <h6 class="inner-main">decks</h6>
+                    <h6 class="link-text center-content">decks</h6>
                 </a>
             </li>
-            <li>
-                <a href="/my_bookmarks" class="vertical-content-grid" style="height:fit-content">
-                    <svg class="svg-icon button" class="inner-header">
+            <li class="inverted color-change">
+                <a href="/my_bookmarks" class="link-with-img no-hover" style="height:fit-content">
+                    <svg class="svg-icon button" class="link-img">
                         <use xlink:href="#bookmark"/>
                     </svg>
-                    <h6 class="inner-main">bookmarks</h6>
+                    <h6 class="link-txt center-content">bookmarks</h6>
                 </a>
             </li>
-            <li>
-                <a href="/home_?edit=upoloads" class="vertical-content-grid" style="height:fit-content">
-                    <svg class="svg-icon button" class="inner-header">
+            <li class="inverted color-change">
+                <a href="/my_uploads" class="link-with-img no-hover">
+                    <svg class="svg-icon button" class="link-img">
                         <use xlink:href="#photo"/>
                     </svg>
-                    <h6 class="inner-main">uploads</h6>
+                    <h6 class="link-txt center-content">uploads</h6>
                 </a>
             </li>
         </ul>
-        <ul>
-            <li><a href="/logout">log out</a></li>
-            <li><a href="#">settings</a></li>
+
+        <svg class="separator" class="inner-header">
+            <use xlink:href="#line"/>
+        </svg>
+
+        <ul class="block">
+            <li class="inverted color-change"><a class="no-hover" href="/logout">log out</a></li>
+            <li class="inverted color-change"><a class="no-hover" href="/my_settings">settings</a></li>
         </ul>
     </div>
 
