--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 {% endif %}
-                <input type="submit" name="button" value="submit">
+                <input type="submit" class="form-button" style="margin-top:1em" name="button" value="submit">
             </form>
         </div>
 
