--- a/static/forms.css
+++ b/static/forms.css
@@ -6,6 +6,97 @@ label {
 
 }
 
+.simple-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1em;
+}
+
+.block.form-info {
+    background-color: var(--background);
+    display: grid;
+    grid-template-areas: 'input-title' 'input-area';
+    border-radius: 10pt;
+}
+
+.block.form-info.inline {
+    grid-template-areas: 'input-title input-area';
+}
+
+.input-title.inline {
+    border-radius: unset;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;s
+}
+
+.input-title {
+    background-color: var(--black);
+    color: var(--background);
+    grid-area: input-title;
+    padding:.4em;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    margin:0;
+}
+.input-area {
+        grid-area: input-area;
+        padding:.4em
+}
+
+form.box {
+    min-height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 2em;
+    padding: 1em;
+    align-items: center;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-color: var(--black);
+}
+
+.image-submit {
+    width: 30px;
+    height:30px;
+    contain:strict;
+    transition: transform .2s
+}
+
+.image-submit svg.svg-icon {
+    width: inherit;
+    height: inherit;
+}
+
+.image-submit form {
+    width: inherit;
+    height: inherit;
+}
+.image-submit form input {
+    height: inherit;
+    width: inherit;
+    opacity: 0;
+    position: fixed;
+}
+
+.image-submit input {
+    height: inherit;
+    width: inherit;
+    opacity: 0;
+    position: fixed;
+}
+
+
+.image-submit:hover, .image-submit:focus, .image-submit:active {
+    transform:rotate(10deg);
+}
+
+/* .image-submit:hover svg.svg-icon .image-submit:focus svg.svg-icon .image-submit:active svg.svg-icon{
+    stroke: var(--black);
+    fill: white;
+} */
+
+
 .switch {
   position: relative;
   display: inline-block;
@@ -58,6 +149,11 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+input:focus {
+    outline: none;
+    border-style: solid;
+    border-color:var(--accent);
+}
 
 input[type="file"] {
     background-color: #ffffff;
@@ -65,7 +161,7 @@ input[type="file"] {
     border-radius: 10px;
     display: block;
     font-weight: 500;
-    width: 300px;
+    width: 245px;
 }
 
 input[type="text"] {
@@ -88,7 +184,7 @@ input[type="text-area"] {
     border-radius: 3pt;
 }
 
-input[type="submit"] {
+/* input[type="submit"] {
     background-color: var(--black);
     color: white;
     font-weight: 700;
@@ -109,7 +205,7 @@ input[type="submit"]:active {
 input[type="submit"]:hover {
     margin-top: 2pt;
     box-shadow: 2px 2px 0px 0px var(--black);
-}
+} */
 
 input[type=range] {
   height: 26px;
@@ -208,8 +304,4 @@ input[type=range]:focus::-ms-fill-upper {
 input[type=range]::-webkit-slider-thumb:active {
     height: 22px;
     width: 22px;
-}
-
-input:focus {
-    outline: none;
 }
