--- a/static/gallery.css
+++ b/static/gallery.css
@@ -2,12 +2,18 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     height: 90%;
-    overflow: scroll;
     grid-gap: 0.6em;
     width: 90%;
     grid-template-rows: repeat(auto-fit, minmax(400px, 1fr));
     justify-items: center;
-    }
+}
+
+.gallery-grid.small {
+    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+    width: unset;
+}
+
 
 .gallery-item{
     background: white;
@@ -17,8 +23,14 @@
     text-align: center;
     height: 400px;
 }
+
 .gallery-item.single {
     height: unset;
+}
+
+.gallery-item.small {
+    width: min-content;
+    height: min-content;
 }
 
 .image-container {
@@ -35,21 +47,33 @@
     width: unset;
     height: unset;
 }
+.image-container.small {
+    width: 200px;
+    height: 200px;
+}
 
 .gallery-image {
     vertical-align: middle;
     max-width: 100%;
     max-height: 100%;
-    height: auto;
     object-fit: cover;
     border-style: inset;
     border-width: thin;
 }
 
-.gallery-image.single:{
+.gallery-image.single {
     object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .gallery-details {
+    width: 300px;
+    min-height: 60px;
+}
 
+.gallery-details.small {
+    display: block;
+    width: 200px;
+    min-height: 50px;
 }
