--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,19 +5,19 @@
         <meta charset="utf-8">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/master.css">
-        <link rel="stylesheet" href="/static/index.css">
-        <link rel="stylesheet" href="/static/tables.css">
-        <link rel="stylesheet" href="/static/forms.css">
-        <link rel="stylesheet" href="/static/user.css">
-        <link rel="stylesheet" href="/static/gallery.css">
-        <link rel="stylesheet" href="/static/hovers.css">
+        <link rel="stylesheet" href="/static/css/master.css">
+        <link rel="stylesheet" href="/static/css/index.css">
+        <link rel="stylesheet" href="/static/css/tables.css">
+        <link rel="stylesheet" href="/static/css/forms.css">
+        <link rel="stylesheet" href="/static/css/user.css">
+        <link rel="stylesheet" href="/static/css/gallery.css">
+        <link rel="stylesheet" href="/static/css/hovers.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
 
         <!-- <script src="https://kit.fontawesome.com/b5b44905b4.js" crossorigin="anonymous"></script> -->
-        <script src="/static/main.js"></script>
-        <script src="/static/form_validation.js"></script>
+        <script src="/static/js/main.js"></script>
+        <script src="/static/js/form_validation.js"></script>
 
         <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon_pkg/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon_pkg/favicon-32x32.png">
